# sequencia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.c  build.sh  build_doc.sh  command.c  doclut.c  exec.c  main.c  sequencia.h  utils.c  value.c
doc/: how2basics.md  operations.md  toc.md
doc/Basic-examples/: Check-if-a-string-is-all-alphanumeric.md  Git-todos.md  List-all-C-and-H-files-in-the-current-directory.md  List-all-C-files-in-the-current-directory.md  List-all-files-and-output-datetime-and-file-name-seperated-by-tabs.md  List-all-files-that-where-changed-today.md  List-all-files-with-datetime-file-name-and-size.md  Parse-ls--l-output.md  Pretty-print-date.md  Stupid-Check-if-a-string-is-all-alphanumeric.md
doc/Operations/: any.md  append.md  axis.md  contains.md  deshape.md  falpha-fdigit-falnum-fpunct-fwhite.md  filter.md  flatmap.md  flatten.md  fnalpha-fndigit-fnalnum-fnpunct-fnwhite.md  group.md  invert.md  join.md  len.md  make.md  map.md  noempty.md  parse.md  prepend.md  ranges.md  rev.md  run.md  same.md  select.md  split.md  str.md  tokens.md  tolower-toupper.md  transform.md  use.md  with.md
exec/: append.c  axis.c  bool.c  contains.c  filter.c  filter_chars.c  join.c  map.c  num.c  operations.h  ranges.c  rev.c  run.c  same.c  select.c  split.c  stats.c  tokens.c  transform.c  use.c
libsq/: array.c  command.c  exec.c  sequencia.h  utils.c  value.c
libsq/exec/: any.c  (+26 more)
libsqanalysis/: all.c  analysis.h  doc.c  op.c  utils.c  value.c
sq/: debugger.c  doc.c  main.c  sq.h
sqlsp/: build.sh  go.mod  go.sum  main.go
